css/_3-modules/article.scss
/* Article */
.article {
  margin-bottom: 64px;
  will-change: transform;
  transition: transform .2s ease-in-out;

  &:hover {
    transform: translateY(-4px);
  }

  @media only screen and (max-width: $mobile) {
    margin-bottom: 32px;
  }
}

.blog {
  .article {
    margin-bottom: 32px;
  }
}

.article__image {
  margin-bottom: 32px;
  position: relative;
  display: block;
  border-radius: 8px;
  padding-bottom: 70%;
  transform: translate(0);
  overflow: hidden;
  background-color: var(--background-alt-color);

  img {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.article-tags__box {
  display: flex;
  margin-bottom: 8px;

  .article__tag {
    position: relative;
    z-index: 1;
    display: inline-block;
    padding: 4px 12px;
    margin: 0 4px 4px 0;
    font-size: 8px;
    line-height: 18px;
    font-weight: 500;
    text-align: center;
    text-transform: uppercase;
    border-radius: 4px;
    background-color: var(--background-alt-color);

    &:hover {
      color: var(--dark);
      background-color: var(--brand-color);
    }

    &:last-child {
      margin: 0 0 4px 0;
    }
  }
}

.article__title {
  margin-bottom: 20px;
  font-size: 32px;
  line-height: 1.1;

  a {
    background: linear-gradient(var(--brand-color),var(--brand-color)) no-repeat bottom /100% 0%;
    transition: background .2s ease-in-out;

    &:hover {
      background-size: 100% 26%;
    }
  }

  @media only screen and (max-width: $desktop) {
    font-size: 30px;
  }
}

.article__excerpt {
  display: -webkit-box;
  margin-bottom: 0;
  font-size: 16px;
  overflow-y: hidden;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
}

.article__meta {
  display: flex;
  align-items: center;
  flex-wrap: wrap;

}

.article-info {
  margin-bottom: 24px;
  font-size: 12px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 1.6px;
  line-height: 1;

  .article__author-link,
  .article__date  {
    color: var(--text-color);
    transition: none;
  }
}

